--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <header class="header">
-    <a href="/" class="title">My New Hugo Site</a>
+    <a href="/" class="title">草とロボット</a>
     
 </header>
 
